# earth_wallpaper

./: .clang-format  .gitignore  .gitlab-ci.yml  CHANGELOG  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  UpdateChangelog.sh  cliff.toml  notify.py  setup.py
.github/workflows/: CI.yml  aur.yml  build.yml  deb.yml  notify.yml  pypi.yml
DEBIAN/: postinst  postrm
aur/nightly/: PKGBUILD
deb/DEBIAN/: control  postinst
debian/: control  postinst  postrm  preinst
doc/: README.md
docs/: README.md
earth-wallpaper/: config.py  main.py  systemtray.py  thread.py
earth-wallpaper/interfaces/: Himawari8.py  LocalWallpaper.py  __init__.py  anime.py  bingRand.py  bingToday.py  fengYun4.py  himawari8.py  localWallpaper.py  wallpaper24.py
earth-wallpaper/interfaces/utils/: PlatformInfo.py  platformInfo.py  setWallpaper.py  settings.py
earth-wallpaper/settings/: about.py  systemtray.py
earth-wallpaper/settings/ui/: UI_about.py  about.ui
earth-wallpaper/ui/: UI_config.py  config.ui
earth-wallpaper/utils/: platformInfo.py  sunCalculator.py  xfce.sh
earth-wallpaper/wallpapers/: 24hourWallpaper.py  FY-4.py
earth_wallpaper/: about.py  config.py  main.py  systemtray.py  thread.py
earth_wallpaper/interfaces/: __init__.py  anime.py  bingRand.py  bingToday.py  fengYun4.py  himawari8.py  localWallpaper.py  wallhaven.py  wallpaper24.py
earth_wallpaper/interfaces/utils/: platformInfo.py  settings.py
earth_wallpaper/ui/: UI_about.py  UI_config.py  about.ui  config.ui  uic.sh
earth_wallpaper/utils/: platformInfo.py  setWallpaper.py
package/: PKGBUILD  earth-wallpaper-deepin-amd64.deb  earth-wallpaper-other-amd64.deb  earth-wallpaper.desktop  package.sh
package/aur/nightly/: PKGBUILD
pypi/: upload.sh
resource/: resource.qrc
scripts/: 0.py  1.py  2.py  24hourWallpaper.py  3.py  4.py  5.py  6.py  Bing-rand.py  Bing-tody.py  FY-4.py  Himawari-8.py  PlatformInfo.py  checkWakkpaperDir.py  get_bing.py  get_wallpaper.py  nasa_apod.py  nasa_daily.py  setWallpaper.py  sunCalculator.py  wifu.py  xfce.sh
src/: about.cpp  about.h  about.ui  config.cpp  config.h  config.ui  main.cpp  thread.cpp  thread.h  trayicon.cpp  trayicon.h
template/: config
(+17 files in other folders)
